--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "MailSettings": {
-        "ToAddress": "darinboesch@me.com"
+        "ToAddress": "darinboesch@gmail.com"
     },
     "ConnectionStrings": {
         "WorldContextConnection": "Server=.;Database=TheWorldDb;Trusted_Connection=true;MultipleActiveResultSets=true;"
